[package]
name = "linfa-causal-inference"
version = "0.6.1"
authors = ["Jorge Perez Burgos <vaijira@gmail.com>"]
description = "Causal inference utilities and methods"
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["causal-inference", "do-calculus", "causal", "inference", "causality"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde", "sprs/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
anyhow = "1.0.48"
petgraph = "0.6"
ndarray = "0.15"
num-traits = "0.2"
sprs = { version="0.11.0", default-features = false }

linfa = { version = "0.6.1", path = "../.." }
linfa-datasets = { version = "0.6.1", path = "../../datasets", features = ["diabetes"] }
linfa-linear = { version = "0.6.1", path = "../linfa-linear" }

[dev-dependencies]
approx = "0.4"
ndarray-rand = "0.14"
